<resources>
    <string name="app_name">SincPedidos</string>
    <string name="name">Nome</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="create_account">Criar conta</string>
    <string name="requerid_field">Este campo é obrigatório</string>
    <string name="invalid_email">Formato de email inválido</string>
    <string name="keep_me_loged_in">Mantenha-me conectado</string>
    <string name="pizza">Pizzas</string>
    <string name="salads">Saladas</string>
    <string name="burgers">Lanches</string>
    <string name="snacks">Petiscos</string>
    <string name="desserts">Sobremesas</string>
    <string name="drinks">Bebidas</string>
    <string name="categories">Categorias</string>
    <string name="choose_your_table">Escolha sua mesa</string>
    <string name="this_table_is_busy">Essa mesa está ocupada</string>


    <string name="shared_prefs">SHARED_PREFS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
