<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragment.CategoriesFragment">
    <android.support.v7.widget.GridLayout
        app:rowCount="3"
        app:columnCount="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_burgers"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:background="#55000000"
                android:textSize="24sp"
                android:textColor="@color/colorTextIcons"
                android:text="@string/burgers"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_pizza"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:background="#55000000"
                android:textSize="24sp"
                android:textColor="@color/colorTextIcons"
                android:text="@string/pizza"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_salads"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:background="#55000000"
                android:textSize="24sp"
                android:textColor="@color/colorTextIcons"
                android:text="@string/salads"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_snacks"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:background="#55000000"
                android:textSize="24sp"
                android:textColor="@color/colorTextIcons"
                android:text="@string/snacks"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_desserts"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:background="#55000000"
                android:textSize="24sp"
                android:textColor="@color/colorTextIcons"
                android:text="@string/desserts"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img_drinks"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="bottom"
                android:gravity="center_horizontal"
                android:background="#55000000"
                android:textSize="24sp"
                android:textColor="@color/colorTextIcons"
                android:text="@string/drinks"/>
        </android.support.v7.widget.CardView>

    </android.support.v7.widget.GridLayout>

</FrameLayout>