<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rounded_bottom"
    tools:context=".presentation.fragment.LoginFragment">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_email_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/login_senha_input_layout"
        app:layout_constraintEnd_toEndOf="@id/login_senha_input_layout"
        android:layout_marginTop="16dp"
        android:elevation="4dp">
        <ImageView
            android:id="@+id/login_show_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="@drawable/ic_show_password"/>

    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_senha_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_email_input_layout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/senha"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/login_save_password_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/keep_me_loged_in"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintTop_toBottomOf="@id/login_senha_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <Button
        android:id="@+id/login_logar_btn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintTop_toBottomOf="@id/login_save_password_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="6dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@color/colorTextIcons"/>


</android.support.constraint.ConstraintLayout>